--- a/cstrike/addons/sourcemod/translations/shavit-hud.phrases.txt
+++ b/cstrike/addons/sourcemod/translations/shavit-hud.phrases.txt
@@ -161,6 +161,10 @@
 	{
 		"en"		"Top left Rank"
 	}
+	"HudVelocityDifference"
+	{
+		"en"		"Velocity Difference"
+	}
 	// ---------- Record Bots ---------- //
 	"ReplayText"
 	{
