--- a/cstrike/addons/sourcemod/translations/shavit-wr.phrases.txt
+++ b/cstrike/addons/sourcemod/translations/shavit-wr.phrases.txt
@@ -28,28 +28,33 @@
 	// ---------- Completion Messages ---------- //
 	"FirstCompletion"
 	{
-		"#format"	"{1:s},{2:N},{3:s},{4:s},{5:s},{6:s},{7:s},{8:s},{9:s},{10:s},{11:d},{12:s},{13:d},{14:d},{15:s},{16:s},{17:s},{18:.2f},{19:.2f},{20:s}"
-		"en"		"{1}{2}{3} finished ({4}{5}{6}) in {7}{8}{9} ({10}#{11}{12}) with {13} jumps, {14} strafes{15}{16}, Avg/Max Spd {17}{18}/{19}{20}."
+		"#format"	"{1:s},{2:N},{3:s},{4:s},{5:s},{6:s},{7:s},{8:s},{9:s},{10:s},{11:d},{12:s},{13:d},{14:d},{15:s},{16:s}"
+		"en"		"{1}{2}{3} finished ({4}{5}{6}) in {7}{8}{9} ({10}#{11}{12}) with {13} jumps, {14} strafes{15}{16}."
 	}
 	"NotFirstCompletion"
 	{
-		"#format"	"{1:s},{2:N},{3:s},{4:s},{5:s},{6:s},{7:s},{8:s},{9:s},{10:s},{11:d},{12:s},{13:d},{14:d},{15:s},{16:s},{17:s},{18:.2f},{19:.2f},{20:s},{21:s}"
-		"en"		"{1}{2}{3} finished ({4}{5}{6}) in {7}{8}{9} ({10}#{11}{12}) with {13} jumps, {14} strafes{15}{16}, Avg/Max Spd {17}{18}/{19} {20}(-{21})"
+		"#format"	"{1:s},{2:N},{3:s},{4:s},{5:s},{6:s},{7:s},{8:s},{9:s},{10:s},{11:d},{12:s},{13:d},{14:d},{15:s},{16:s},{17:s},{18:s}"
+		"en"		"{1}{2}{3} finished ({4}{5}{6}) in {7}{8}{9} ({10}#{11}{12}) with {13} jumps, {14} strafes{15}{16} {17}(-{18})"
 	}
 	"NotFirstCompletionWorse"
 	{
-		"#format"	"{1:s},{2:N},{3:s},{4:s},{5:s},{6:s},{7:s},{8:s},{9:s},{10:s},{11:d},{12:s},{13:d},{14:d},{15:s},{16:s},{17:s},{18:.2f},{19:.2f},{20:s},{21:s}"
-		"en"		"{1}{2}{3} finished ({4}{5}{6}) in {7}{8}{9} ({10}#{11}{12}) with {13} jumps, {14} strafes{15}{16}, Avg/Max Spd {17}{18}/{19} {20}(+{21})"
+		"#format"	"{1:s},{2:N},{3:s},{4:s},{5:s},{6:s},{7:s},{8:s},{9:s},{10:s},{11:d},{12:s},{13:d},{14:d},{15:s},{16:s},{17:s}"
+		"en"		"{1}{2}{3} finished ({4}{5}{6}) in {7}{8}{9} ({10}#{11}{12}) with {13} jumps, {14} strafes{15}{16} (+{17})"
 	}
 	"WorseTime"
 	{
-		"#format"	"{1:s},{2:s},{3:s},{4:s},{5:s},{6:s},{7:d},{8:d},{9:s},{10:s},{11:s},{12:.2f},{13:.2f},{14:s},{15:s}"
-		"en"		"You have finished ({1}{2}{3}) in {4}{5}{6} with {7} jumps, {8} strafes{9}{10}, Avg/Max Spd {11}{12}/{13}{14} (+{15})"
+		"#format"	"{1:s},{2:s},{3:s},{4:s},{5:s},{6:s},{7:d},{8:d},{9:s},{10:s},{11:s}"
+		"en"		"You have finished ({1}{2}{3}) in {4}{5}{6} with {7} jumps, {8} strafes{9}{10} (+{11})"
 	}
 	"UnrankedTime"
 	{
-		"#format"	"{1:s},{2:s},{3:s},{4:s},{5:s},{6:s},{7:d},{8:d},{9:s},{10:s},{11:s},{12:.2f},{13:.2f},{14:s}"
-		"en"		"You have finished ({1}{2}{3}) in {4}{5}{6} with {7} jumps, {8} strafes{9}{10}, Avg/Max Spd {11}{12}/{13}{14}."
+		"#format"	"{1:s},{2:s},{3:s},{4:s},{5:s},{6:s},{7:d},{8:d},{9:s},{10:s}"
+		"en"		"You have finished ({1}{2}{3}) in {4}{5}{6} with {7} jumps, {8} strafes{9}{10}."
+	}
+	"CompletionExtraInfo"
+	{
+		"#format"   "{1:s},{2:.2f},{3:s},{4:s},{5:.2f},{6:s},{7:s},{8:.1f},{9:s}"
+		"en"        "Avg/Max Spd: {1}{2}{3}/{4}{5}{6}. Perfs: {7}{8}{9}%%."
 	}
 	// ---------- Deletion Menus ---------- //
 	"DeleteAllRecords"
